force-app/main/default/objects/CS_AzureSSO__c/CS_AzureSSO__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CS AzureSSO</label>
</CustomObject>