force-app/main/default/objects/CS_AzureSSO__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Azure app client id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>