force-app/main/default/objects/CS_AzureSSO__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scopes for the auth call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>