force-app/main/default/objects/CS_AzureSSO__c/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <description>Azure app tenant Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>