force-app/main/default/objects/CS_AzureSSO__c/fields/Thumbprint__c.field-meta.xml
<CustomField>
    <fullName>Thumbprint__c</fullName>
    <description>Certificate thumbprint for auth matching</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Thumbprint</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>