force-app/main/default/objects/CS_AzureSSO__c/fields/Token1__c.field-meta.xml
<CustomField>
    <fullName>Token1__c</fullName>
    <description>Access token first 255 characters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token Part 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>