force-app/main/default/objects/CS_AzureSSO__c/fields/Token2__c.field-meta.xml
<CustomField>
    <fullName>Token2__c</fullName>
    <description>Access token second 255 characters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>