force-app/main/default/objects/CS_AzureSSO__c/fields/Token3__c.field-meta.xml
<CustomField>
    <fullName>Token3__c</fullName>
    <description>Access token third 255 characters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access Token Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>